--- a/index.html
+++ b/index.html
@@ -1081,16 +1081,30 @@
 								<!--End item-->	
 
 								</li>
-
-
 								<li class="col-sm-6">
 
+									<!--Item-->
+									<div class="item web">
+									<a href="project2_single.html">
+										<div class="desc">
+										<h5 class="proj-desc">Small Projects 
+										 <span>Basic Analytics</span></h5>
+										</div>
+										<img src="img/portfolio/2.jpg" alt="">
+									</a>
+
+								</div>
+								<!--End item-->	
+
+								</li>
+								<li class="col-sm-6">
+									
 								<!--Item-->	
 								<div class="item web">
 								<a href="img/portfolio/2.jpg" class="popup">
 									<div class="desc">
-									<h5 class="proj-desc">Project Name
-									 <span>Web design</span></h5>
+									<h5 class="proj-desc">Small Projects 
+									 <span>Basic</span></h5>
 									</div>
 									<img src="img/portfolio/2.jpg" alt="">
 								</a>
