--- a/project2_single.html
+++ b/project2_single.html
@@ -83,8 +83,8 @@
 				<!--Main title-->
 
 					<div class="main-title mt-100 t-center">
-						<h1 class="mb-30">Regression Analysis</h1>
-						<h3>Probability &amp; Statistics</h3>
+						<h1 class="mb-30">Small Projects</h1>
+						<h3>Basic Analytics</h3>
 					</div>	
 
 				<!--End main title-->
@@ -120,7 +120,7 @@
 					<!--End row-->
 
 					<!--Row-->
-					<iframe src="Projects/Lokaraju_Project6.html"  height="4000" width="900" frameborder="0"></iframe>
+					<iframe src="Projects/ALY6000 Disc.pdf"  height="4000" width="900" frameborder="0"></iframe>
 					<!--End row-->
 					
 												
