--- a/index.html
+++ b/index.html
@@ -1044,7 +1044,7 @@
 							<ul class="filter" id="category">
 								<li><a class="active" href="#" data-filter="all">all</a></li>
 								<li><a href="#" data-filter="web">Probability & Statistics</a></li>
-								<li><a href="#" data-filter="graphic">Text Mining & Predictive Analytics</a></li>
+								<li><a href="#" data-filter="graphic">Exploratory Data Analysis</a></li>
 								<li><a href="#" data-filter="motion">NLP</a></li>
 								<li><a href="#" data-filter="motion">Database Management</a></li>
 							</ul>
@@ -1095,6 +1095,23 @@
 
 								</div>
 								<!--End item-->	
+
+
+							</li>
+							<li class="col-sm-6">
+
+								<!--Item-->
+								<div class="item web">
+								<a href="project3_single.html">
+									<div class="desc">
+									<h5 class="proj-desc">Loan Defaulters - EDA
+									 <span>Exploratory Data Analysis</span></h5>
+									</div>
+									<img src="img/portfolio/31.jpg" alt="">
+								</a>
+
+							</div>
+							<!--End item-->	
 
 								</li>
 								<li class="col-sm-6">
