--- a/index.html
+++ b/index.html
@@ -1105,7 +1105,7 @@
 									<a href="project3_single.html">
 									<div class="desc">
 									<h5 class="proj-desc">Loan Defaulters - EDA
-									 <span>Exploratory Data Analysis</span></h5>
+									<span>Exploratory Data Analysis</span></h5>
 									</div>
 									<img src="img/portfolio/31.jpg" alt="">
 								</a>
@@ -1113,6 +1113,22 @@
 								</div>
 								<!--End item-->	
 
+								</li>
+								<li class="col-sm-6">
+
+									<!--Item-->
+									<div class="item web">
+									<a href="AutoVizEDA.html">
+									<div class="desc">
+									<h5 class="proj-desc">AutoViz-EDA
+								 	<span>Exploratory Data Analysis</span></h5>
+									</div>
+									<img src="img/portfolio/31.jpg" alt="">
+								</a>
+
+								</div>
+								<!--End item-->	
+								
 								</li>
 								<li class="col-sm-6">
 									
