--- a/AutoVizEDA.html
+++ b/AutoVizEDA.html
@@ -83,7 +83,7 @@
 				<!--Main title-->
 
 					<div class="main-title mt-100 t-center">
-						<h1 class="mb-30">Loan Defaulters Dataset - EDA</h1>
+						<h1 class="mb-30">AutoViz - EDA</h1>
 						<h3>Exploratory Data Analysis</h3>
 					</div>	
 
@@ -120,7 +120,7 @@
 					<!--End row-->
 
 					<!--Row-->
-					<iframe src="Projects/AutoVizEDA.html"  height="100000" width="900" frameborder="0"></iframe>
+					<iframe src="Projects/AutoVizEDAProject.html"  height="100000" width="900" frameborder="0"></iframe>
 					<!--End row-->
 					
 												
