--- a/index.html
+++ b/index.html
@@ -1074,7 +1074,7 @@
 										<h5 class="proj-desc">Regression Analysis
 										 <span>Probability & Statistics</span></h5>
 										</div>
-										<img src="img/portfolio/1.jpg" alt="">
+										<img src="img/portfolio/RA.png" alt="">
 									</a>
 
 								</div>
@@ -1090,7 +1090,7 @@
 										<h5 class="proj-desc">Small Projects 
 										 <span>Basic Analytics</span></h5>
 										</div>
-										<img src="img/portfolio/2.jpg" alt="">
+										<img src="img/portfolio/IntrotoA.png" alt="">
 									</a>
 
 								</div>
@@ -1107,7 +1107,7 @@
 									<h5 class="proj-desc">Loan Defaulters - EDA
 									<span>Exploratory Data Analysis</span></h5>
 									</div>
-									<img src="img/portfolio/31.jpg" alt="">
+									<img src="img/portfolio/EDA.jpg" alt="">
 								</a>
 
 								</div>
@@ -1123,7 +1123,7 @@
 									<h5 class="proj-desc">AutoViz-EDA
 								 	<span>Exploratory Data Analysis</span></h5>
 									</div>
-									<img src="img/portfolio/31.jpg" alt="">
+									<img src="img/portfolio/AutovizEDA.jpg" alt="">
 								</a>
 
 								</div>
