--- a/index.html
+++ b/index.html
@@ -1069,7 +1069,7 @@
 
 									<!--Item-->	
 									<div class="item web">
-									<a href="project_single.html">
+									<a href="Regression Analysis.html">
 										<div class="desc">
 										<h5 class="proj-desc">Regression Analysis
 										 <span>Probability & Statistics</span></h5>
@@ -1085,7 +1085,7 @@
 
 									<!--Item-->
 									<div class="item web">
-									<a href="project2_single.html">
+									<a href="Intro.html">
 										<div class="desc">
 										<h5 class="proj-desc">Small Projects 
 										 <span>Basic Analytics</span></h5>
@@ -1102,7 +1102,7 @@
 
 									<!--Item-->
 									<div class="item web">
-									<a href="project3_single.html">
+									<a href="EDA.html">
 									<div class="desc">
 									<h5 class="proj-desc">Loan Defaulters - EDA
 									<span>Exploratory Data Analysis</span></h5>
@@ -1124,6 +1124,22 @@
 								 	<span>Exploratory Data Analysis</span></h5>
 									</div>
 									<img src="img/portfolio/AutovizEDA.jpg" alt="">
+								</a>
+
+								</div>
+								<!--End item-->	
+
+								</li>
+								<li class="col-sm-6">
+
+									<!--Item-->
+									<div class="item web">
+									<a href="AutoEDA.html">
+									<div class="desc">
+									<h5 class="proj-desc">AutoVisualisationTools-EDA
+								 	<span>Exploratory Data Analysis</span></h5>
+									</div>
+									<img src="img/portfolio/Autoviztools.png" alt="">
 								</a>
 
 								</div>
