--- a/index.html
+++ b/index.html
@@ -1126,7 +1126,6 @@
 									<img src="img/portfolio/AutovizEDA.jpg" alt="">
 								</a>
 
-								
 								</div>
 								<!--End item-->	
 
@@ -1141,6 +1140,22 @@
 								 	<span>Exploratory Data Analysis</span></h5>
 									</div>
 									<img src="img/portfolio/Autoviztools.png" alt="">
+								</a>
+
+								</div>
+								<!--End item-->	
+
+								</li>
+								<li class="col-sm-6">
+
+									<!--Item-->
+									<div class="item web">
+									<a href="EDA1.html">
+									<div class="desc">
+									<h5 class="proj-desc">WORK IN PROGRESS
+									<span>Exploratory Data Analysis</span></h5>
+									</div>
+									<img src="img/portfolio/EDA.jpg" alt="">
 								</a>
 
 								</div>
