--- a/blog_single.html
+++ b/blog_single.html
@@ -71,7 +71,7 @@
 				<nav id="main-nav" class="main-nav clearfix t-center uppercase not-tabbed">
 
 				<ul>
-					<li ><a href="index.html"><i class="icon-home"></i>Home<span>Back Home</span></a></li>
+					<li ><a href="index.html#blog"><i class="icon-home"></i>Home<span>Back Home</span></a></li>
 					<li ><a href="blog.html"><i class="icon-chat"></i>Blog<span>Back to blog</span></a></li>
 					
 				</ul>
