--- a/Cyber Security blog.html
+++ b/Cyber Security blog.html
@@ -390,12 +390,12 @@
 								
 								
 									<!--Row-->
-										<div class="row">
+										<!--div class="row">
 
 									<div class="col-md-12  ">
 
 										<!--Block reply-->
-										<div class="block-reply">
+										<!--div class="block-reply">
 
 										<div class="sub-title mb-40">
 			                                <h2 class="uppercase">Leave a comment</h2>
@@ -404,7 +404,7 @@
 										<form action="#" class="reply-form">
 
 										<!--Input columns-->
-										<div class="input-columns clearfix">
+										<!--div class="input-columns clearfix">
 
 										<div class="column1">
 											<div class="column-inner">
@@ -413,7 +413,7 @@
 										</div>
 
 										<!--Column-->
-										<div class="column2">
+										<!--div class="column2">
 											<div class="column-inner">
 										<input type="text" name="email" id="email" value="" placeholder="Email">
 										</div>
@@ -423,7 +423,7 @@
 										</div>
 										<!--End input columns-->
 
-										<input type="text" name="website" id="website" value="" placeholder="WebSite">
+										<!--input type="text" name="website" id="website" value="" placeholder="WebSite">
 									<textarea rows="7" cols="45" id="message" placeholder="Message" name="message"></textarea>
 									<input type="submit" class="but opc submit" value="Post a comment">
 									</form>
