--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 							<div class="block-content mb-100">
 
 									<!--Row-->
-										<div class="row">
+										<!--div class="row">
 
 									<div class="col-md-12  ">
 
